[gd_scene load_steps=26 format=3 uid="uid://734g3y234xfd"]

[ext_resource type="Script" path="res://script/management/level_class.gd" id="1_ey0xe"]
[ext_resource type="Resource" uid="uid://dffkt7417qwye" path="res://resource/loading_preset/ec.tres" id="2_i62f1"]
[ext_resource type="Script" path="res://script/resource/environment_resource.gd" id="3_b10bs"]
[ext_resource type="Texture2D" uid="uid://bws16lawj7pvg" path="res://asset/2d/background/level1_2.png" id="4_tq183"]
[ext_resource type="ArrayMesh" uid="uid://cid1h1avlpa0w" path="res://asset/3d/room/evencare/evencare2.obj" id="5_vy6vx"]
[ext_resource type="Material" uid="uid://bdce4owxtgw6r" path="res://asset/3d/material/evencare.tres" id="6_d5kdj"]
[ext_resource type="Script" path="res://script/management/nifty_class.gd" id="7_osfe1"]
[ext_resource type="Resource" uid="uid://dc48ihsiem03n" path="res://resource/loading_preset/ec_noload.tres" id="9_xp5w7"]
[ext_resource type="PackedScene" uid="uid://dn6hdyapwjmyp" path="res://scene/object/interactive/level/warp.tscn" id="10_motka"]
[ext_resource type="Script" path="res://script/object/environment/visibility_node.gd" id="13_6qi33"]
[ext_resource type="PackedScene" uid="uid://db50wvqb2n0b8" path="res://scene/object/interactive/common/piece.tscn" id="13_ao78d"]
[ext_resource type="Shader" path="res://shader/spatial/psx_lit.gdshader" id="14_5d1dj"]
[ext_resource type="Script" path="res://script/object/interactive/level/spawn.gd" id="14_gdd85"]
[ext_resource type="Script" path="res://script/object/trigger/dialogue_trigger.gd" id="14_i1lxw"]
[ext_resource type="ArrayMesh" uid="uid://briajkjlnb06k" path="res://asset/3d/object/sign2.obj" id="14_ymevh"]
[ext_resource type="Resource" uid="uid://by8kf70db6lcq" path="res://resource/textbox/default.tres" id="15_h6hy7"]
[ext_resource type="PackedScene" uid="uid://vj02mjyg4go" path="res://scene/object/interactive/common/door.tscn" id="17_74qs5"]
[ext_resource type="ArrayMesh" uid="uid://1tydf2jogvkw" path="res://asset/3d/room/oddcare/oddcare2.obj" id="17_alfbv"]

[sub_resource type="Resource" id="Resource_thkrr"]
script = ExtResource("3_b10bs")
sky_color = Color(1, 1, 1, 1)
texture = ExtResource("4_tq183")
scroll_speed = 0.2
offset_y = 0.25
ambient_color = Color(1, 1, 1, 1)
environment_darkness = 1.0
enable_fog = false
fog_color = Color(1, 1, 1, 1)
fog_radius = 13.5

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_6k4co"]
data = PackedVector3Array(2.5, 0, -0.5, -0.5, 0, -0.5, 2.5, 1, -0.5, 2.5, 1, -0.5, -0.5, 0, -0.5, -0.5, 1, -0.5, 3.5, 1, 2, 3.5, 0, 2, 3.5, 1, 3, 3.5, 1, 3, 3.5, 0, 2, 3.5, 0, 3, -0.5, 0, 1, 2.5, 0, 1, -0.5, 1, 1, -0.5, 1, 1, 2.5, 0, 1, 2.5, 1, 1, 2.5, 0, -1.5, 2.5, 1, -1.5, 2.5, 0, -2.5, 2.5, 0, -2.5, 2.5, 1, -1.5, 2.5, 1, -2.5, 2.5, 0, -2.5, 2.5, 1, -2.5, 15.5, 0, -2.5, 15.5, 0, -2.5, 2.5, 1, -2.5, 15.5, 1, -2.5, 3.5, 1, 3, 3.5, 0, 3, 15.5, 1, 3, 15.5, 1, 3, 3.5, 0, 3, 15.5, 0, 3, 2.5, 1, 1, 2.5, 0, 1, 2.5, 1, 2, 2.5, 1, 2, 2.5, 0, 1, 2.5, 0, 2, 2.5, 1, 2, 2.5, 0, 2, 3.5, 1, 2, 3.5, 1, 2, 2.5, 0, 2, 3.5, 0, 2, 15.5, 0, -2.5, 15.5, 1, -2.5, 15.5, 0, -3.5, 15.5, 0, -3.5, 15.5, 1, -2.5, 15.5, 1, -3.5, 15.5, 1, 3, 15.5, 0, 3, 15.5, 1, 3.88, 15.5, 1, 3.88, 15.5, 0, 3, 15.5, 0, 3.88, 15.5, 0, -3.5, 15.5, 1, -3.5, 16.5, 0, -3.5, 16.5, 0, -3.5, 15.5, 1, -3.5, 16.5, 1, -3.5, 15.5, 1, 3.88, 15.5, 0, 3.88, 16.5, 1, 3.88, 16.5, 1, 3.88, 15.5, 0, 3.88, 16.5, 0, 3.88, 16.5, 1, 3.88, 16.5, 0, 3.88, 16.5, 1, 0.88, 16.5, 1, 0.88, 16.5, 0, 3.88, 16.5, 0, 0.88, 16.5, 1, 0.88, 16.5, 0, 0.88, 19.5, 1, 0.88, 19.5, 1, 0.88, 16.5, 0, 0.88, 19.5, 0, 0.88, 16.5, 0, -3.5, 16.5, 1, -3.5, 16.5, 0, -0.5, 16.5, 0, -0.5, 16.5, 1, -3.5, 16.5, 1, -0.5, 16.5, 0, -0.5, 16.5, 1, -0.5, 19.5, 0, -0.5, 19.5, 0, -0.5, 16.5, 1, -0.5, 19.5, 1, -0.5, 2.5, 1, -1.5, 2.5, 0, -1.5, 3.5, 1, -1.5, 3.5, 1, -1.5, 2.5, 0, -1.5, 3.5, 0, -1.5, 3.5, 0, -0.5, 3.5, 1, -0.5, 3.5, 0, -1.5, 3.5, 0, -1.5, 3.5, 1, -0.5, 3.5, 1, -1.5, 2.5, 0, -0.5, 2.5, 1, -0.5, 3.5, 0, -0.5, 3.5, 0, -0.5, 2.5, 1, -0.5, 3.5, 1, -0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u8uj8"]
render_priority = 0
shader = ExtResource("14_5d1dj")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/tile_mode = false
shader_parameter/tile = Vector2i(0, 0)
shader_parameter/per_quad_depth = false
shader_parameter/adjustable_depth = false
shader_parameter/depth_offset = null

[sub_resource type="BoxShape3D" id="BoxShape3D_doudx"]
size = Vector3(5.75, 1, 6.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pkyhl"]
size = Vector3(5.75, 1, 6.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_qgwlq"]

[sub_resource type="GDScript" id="GDScript_xri6c"]
script/source = "extends Node

var first_trigger: bool = false
var second_trigger: bool = false

@onready var door: Door = $\"../Door\"


func _on_first_trigger(body):
	if body is Player:
		first_trigger = true


func _on_second_trigger(body):
	if body is Player and first_trigger:
		door.close()
		second_trigger = true


func _on_third_trigger(body):
	if body is Player and second_trigger:
		
		await get_tree().create_timer(randf_range(0.0, 2.0)).timeout
		
		Global.crash_game()
"

[node name="level1-room2" type="Node3D"]
script = ExtResource("1_ey0xe")
room_name = "level1-room2"
loading_preset = ExtResource("2_i62f1")
background_music = 2
footstep_sound = 1
allow_front_movement = false
camera_height = 4.5
camera_distance = 13.0
camera_angle = -20.0
limit_camera_horizontal = true
horizontal_limit = Vector2(2.5, 15.5)
environment_settings = SubResource("Resource_thkrr")
odd_care_room_on_gen_3 = true
hardcoded_properties = 1

[node name="LevelBody" type="StaticBody3D" parent="."]

[node name="LevelCollision" type="CollisionShape3D" parent="LevelBody"]
shape = SubResource("ConcavePolygonShape3D_6k4co")

[node name="Warp" parent="." instance=ExtResource("10_motka")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
warp_direction = 2
scene = "res://scene/room/level1/room1.tscn"
loading_preset = ExtResource("9_xp5w7")

[node name="Warp2" parent="." instance=ExtResource("10_motka")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 0)
warp_direction = 1
scene = "res://scene/room/level1/room3.tscn"
loading_preset = ExtResource("9_xp5w7")

[node name="PieceArea" parent="." instance=ExtResource("13_ao78d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="PieceArea2" parent="." instance=ExtResource("13_ao78d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0)

[node name="PieceArea3" parent="." instance=ExtResource("13_ao78d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="PieceArea4" parent="." instance=ExtResource("13_ao78d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="PieceArea5" parent="." instance=ExtResource("13_ao78d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 0)

[node name="PieceArea6" parent="." instance=ExtResource("13_ao78d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 0)

[node name="SpawnClass" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
script = ExtResource("14_gdd85")
scene_path = "res://scene/room/level1/room1.tscn"

[node name="SpawnClass2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 0)
script = ExtResource("14_gdd85")
scene_path = "res://scene/room/level1/room3.tscn"

[node name="SignMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.981627, 0, -0.190809, 0, 1, 0, 0.190809, 0, 0.981627, 6, 0, -1)
mesh = ExtResource("14_ymevh")
surface_material_override/0 = SubResource("ShaderMaterial_u8uj8")

[node name="SignMesh2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.981627, 0, -0.190809, 0, 1, 0, 0.190809, 0, 0.981627, 12, 0, -1)
mesh = ExtResource("14_ymevh")
surface_material_override/0 = SubResource("ShaderMaterial_u8uj8")

[node name="DialogueTrigger3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -1)
script = ExtResource("14_i1lxw")
textbox_preset = ExtResource("15_h6hy7")
textbox_text = "evencare_3"
height_offset = 2.5
min_distance = 1.0

[node name="GenSpecific" type="Node" parent="."]
script = ExtResource("13_6qi33")
gens = Array[int]([4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15])

[node name="DialogueTrigger2" type="Marker3D" parent="GenSpecific"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -1)
script = ExtResource("14_i1lxw")
textbox_preset = ExtResource("15_h6hy7")
textbox_text = "evencare_2"
height_offset = 2.5

[node name="GenSpecific2" type="Node" parent="."]
script = ExtResource("13_6qi33")
gens = Array[int]([1, 2, 3])

[node name="DialogueTrigger2" type="Marker3D" parent="GenSpecific2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -1)
script = ExtResource("14_i1lxw")
textbox_preset = ExtResource("15_h6hy7")
textbox_text = "oddcare"
height_offset = 2.5

[node name="GenSpecific3" type="Node" parent="."]
script = ExtResource("13_6qi33")
non_odd_care_exclusive = true

[node name="EvenCareMesh" type="MeshInstance3D" parent="GenSpecific3"]
mesh = ExtResource("5_vy6vx")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_d5kdj")
script = ExtResource("7_osfe1")

[node name="GenSpecific4" type="Node" parent="."]
script = ExtResource("13_6qi33")
odd_care_exclusive = true

[node name="Door" parent="GenSpecific4" instance=ExtResource("17_74qs5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.5, 0, -0.5)

[node name="OddCareMesh" type="MeshInstance3D" parent="GenSpecific4"]
mesh = ExtResource("17_alfbv")
surface_material_override/0 = ExtResource("6_d5kdj")
script = ExtResource("7_osfe1")

[node name="ThirdTrigger" type="Area3D" parent="GenSpecific4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5, 0, 0)

[node name="TriggerCollision" type="CollisionShape3D" parent="GenSpecific4/ThirdTrigger"]
shape = SubResource("BoxShape3D_doudx")

[node name="SecondTrigger" type="Area3D" parent="GenSpecific4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)

[node name="TriggerCollision" type="CollisionShape3D" parent="GenSpecific4/SecondTrigger"]
shape = SubResource("BoxShape3D_pkyhl")

[node name="FirstTrigger" type="Area3D" parent="GenSpecific4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 0)

[node name="TriggerCollision" type="CollisionShape3D" parent="GenSpecific4/FirstTrigger"]
shape = SubResource("BoxShape3D_qgwlq")

[node name="OddCareDoor" type="Node" parent="GenSpecific4"]
script = SubResource("GDScript_xri6c")

[connection signal="body_entered" from="GenSpecific4/ThirdTrigger" to="GenSpecific4/OddCareDoor" method="_on_third_trigger"]
[connection signal="body_entered" from="GenSpecific4/SecondTrigger" to="GenSpecific4/OddCareDoor" method="_on_second_trigger"]
[connection signal="body_entered" from="GenSpecific4/FirstTrigger" to="GenSpecific4/OddCareDoor" method="_on_first_trigger"]
