[gd_scene load_steps=10 format=3 uid="uid://cvfva2a450y1b"]

[ext_resource type="Script" path="res://script/management/level_class.gd" id="1_e0fun"]
[ext_resource type="ArrayMesh" uid="uid://cvcmf4tcq2gf6" path="res://asset/3d/room/level2/level2.obj" id="2_oqjas"]
[ext_resource type="Resource" uid="uid://dffkt7417qwye" path="res://resource/loading_preset/ec.tres" id="2_r7isy"]
[ext_resource type="Script" path="res://script/resource/environment_resource.gd" id="2_xleam"]
[ext_resource type="Shader" path="res://shader/spatial/psx_unlit.gdshader" id="3_qr06m"]
[ext_resource type="Script" path="res://script/management/nifty_class.gd" id="5_r4n11"]
[ext_resource type="Texture2D" uid="uid://bwx2lwbcmpcrt" path="res://asset/3d/room/level2/texture.png" id="6_yyyq4"]

[sub_resource type="Resource" id="Resource_ehjxm"]
script = ExtResource("2_xleam")
sky_color = Color(1, 1, 1, 1)
scroll_speed = 0.25
offset_y = 0.25
ambient_color = Color(1, 1, 1, 1)
environment_darkness = 1.0
enable_fog = false
fog_color = Color(1, 1, 1, 1)
fog_radius = 13.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oe7fo"]
render_priority = 0
shader = ExtResource("3_qr06m")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/albedoTex = ExtResource("6_yyyq4")
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/tile_mode = false
shader_parameter/tile = Vector2i(0, 0)
shader_parameter/per_quad_depth = false
shader_parameter/adjustable_depth = false
shader_parameter/depth_offset = null

[node name="level2-room1" type="Node3D"]
script = ExtResource("1_e0fun")
room_name = "level2-room1"
loading_preset = ExtResource("2_r7isy")
background_music = 3
footstep_sound = 1
spawn_camera_root = false
environment_settings = SubResource("Resource_ehjxm")

[node name="Level2Mesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_oqjas")
surface_material_override/0 = SubResource("ShaderMaterial_oe7fo")
script = ExtResource("5_r4n11")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.957717, 0.287712, 0, -0.287712, 0.957717, -0.183, 3.75, 10.75)
fov = 35.0
